Correction for bold font presentation.

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <link href=css/styles.css rel=stylesheet>
 <style>
 @font-face {
-	font-family: 'officsanbol';
-	src: url('font/officsanbol.woff') format('woff'), url('font/officsanbol.ttf') format('truetype');
+	font-family: 'officsanboo';
+	src: url('font/officsanboo.woff') format('woff'), url('font/officsanboo.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'officsanboo';
-	src: url('font/officsanboo.woff') format('woff'), url('font/officsanboo.ttf') format('truetype');
-	font-weight: normal;
+	src: url('font/officsanbol.woff') format('woff'), url('font/officsanbol.ttf') format('truetype');
+	font-weight: bold;
 	font-style: normal;
 }
 
