Clearer inline style sample.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 		<figure>
 			<img src=img/inline.svg alt="inline styles are generally bad">
 			<figcaption>inline style</figcaption>
-			<samp>style="…"</samp>
+			<samp>&lt;elem style="…"&gt;</samp>
 			<samp>1–0–0–0</samp>
 		</figure>
 		
