Add hover tooltips on the two ones with commentary.

--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 		</figure>
 		
 		<figure>
-			<img src=img/inline.svg alt="inline styles are generally bad">
+			<img src=img/inline.svg alt="inline styles are generally bad" title="inline styles are generally bad">
 			<figcaption>inline style</figcaption>
 			<samp>&lt;p style="…"&gt;</samp>
 			<samp>1–0–0–0</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/axe-murder.svg alt="!important is axe murder">
+			<img src=img/axe-murder.svg alt="!important is axe murder" title="!important is axe murder">
 			<figcaption>!important</figcaption>
 			<samp>!important</samp>
 			<samp>1–0–0–0–0</samp>
