--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 				</div>
 				<div>
 					<dt><samp>*</samp> <samp>+</samp> <samp>&gt;</samp> <samp>~</samp>
-					<dd>The <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Universal_selectors target=_blank>universal selector</a> has no value. When combined with other selectors, they do not increase specificity.
+					<dd>A <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/Universal_selectors target=_blank>universal selector</a> has no value. When combined with other selectors, they do not increase specificity.
 				</div>
 				<div>
 					<dt><samp>:not(x)</samp>
