Centered header text improves look.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ header { display: flex; align-items: center; justify-content: center; }
 header > * { flex: 1; }
 header h1 { flex: 1 0; padding: 1ex; }
 header img { justify-content: end; flex: 0 1; font-size: 48px; margin: 0 1ex 0 0.5ex; }
-header p { justify-content: end; flex: 0 1; padding: 1em; min-width: fit-content; text-align: right; }
+header p { justify-content: end; flex: 0 1; padding: 1em; min-width: fit-content; text-align: center; }
 
 #selectors { display: flex; align-items: center; flex-wrap: wrap; justify-content: center; }
 #selectors figure { flex 0 0; }
