Alt text corrections and standardization on "type", not "element".

--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 		</figure>
 		
 		<figure>
-			<img src=img/element-single.svg alt="1 element">
-			<figcaption>1 element</figcaption>
+			<img src=img/element-single.svg alt="1 type">
+			<figcaption>1 type</figcaption>
 			<samp>section</samp>
 			<samp>0–0–1</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/element-multiple.svg alt="2 elements">
-			<figcaption>2 elements</figcaption>
+			<img src=img/element-multiple.svg alt="2 types">
+			<figcaption>2 types</figcaption>
 			<samp>section &gt; p</samp>
 			<samp>0–0–2</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/element-many.svg alt="9 elements">
-			<figcaption>9 elements</figcaption>
+			<img src=img/element-many.svg alt="9 types">
+			<figcaption>9 types</figcaption>
 			<samp>body … section p</samp>
 			<samp>0–0–9</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/class-single.svg alt="9 elements">
+			<img src=img/class-single.svg alt="1 class">
 			<figcaption>1 class</figcaption>
 			<samp>.missing-key</samp>
 			<samp>0–1–0</samp>
@@ -146,50 +146,50 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 		</figure>
 		
 		<figure>
-			<img src=img/pseudo-class.svg alt="9 elements">
+			<img src=img/pseudo-class.svg alt="1 pseudo-class">
 			<figcaption>1 pseudo-class</figcaption>
 			<samp>:only-of-type</samp>
 			<samp>0–1–0</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/element-class.svg alt="1 element, 1 clacss">
-			<figcaption>1 element<br>1 class</figcaption>
+			<img src=img/element-class.svg alt="1 type, 1 class">
+			<figcaption>1 type<br>1 class</figcaption>
 			<samp>li.myclass</samp>
 			<samp>0–1–1</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/element-attribute.svg alt="1 element, 1 attribute">
-			<figcaption>1 element<br>1 attribute</figcaption>
+			<img src=img/element-attribute.svg alt="1 type, 1 attribute">
+			<figcaption>1 type<br>1 attribute</figcaption>
 			<samp>li[attr]</samp>
 			<samp>0–1–1</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/elements-pseudo.svg alt="2 elements, 1 pseudo-class">
-			<figcaption>2 elements<br>1 pseudo-class</figcaption>
+			<img src=img/elements-pseudo.svg alt="2 types, 1 pseudo-class">
+			<figcaption>2 types<br>1 pseudo-class</figcaption>
 			<samp>li:nth-of-type(3n)~li</samp>
 			<samp>0–1–2</samp>
 		</figure>
 		
 		<figure>
 			<img src=img/elements-attribute.svg alt="">
-			<figcaption class=multiline>2 elements<br>1 attribute</figcaption>
+			<figcaption class=multiline>2 types<br>1 attribute</figcaption>
 			<samp>form input[type=email]</samp>
 			<samp>0–1–2</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/element-class-pseudo.svg alt="1 element, 1 class, 1 pseudo-class">
-			<figcaption class=multiline>1 element<br>1 class<br>1 pseudo-class</figcaption>
+			<img src=img/element-class-pseudo.svg alt="1 type, 1 class, 1 pseudo-class">
+			<figcaption class=multiline>1 type<br>1 class<br>1 pseudo-class</figcaption>
 			<samp>li.class:focus</samp>
 			<samp>0–2–1</samp>
 		</figure>
 		
 		<figure>
-			<img src=img/element-class-attribute.svg alt="1 element, 1 class, 1 attribute">
-			<figcaption class=multiline>1 element<br>1 class<br>1 attribute</figcaption>
+			<img src=img/element-class-attribute.svg alt="1 type, 1 class, 1 attribute">
+			<figcaption class=multiline>1 type<br>1 class<br>1 attribute</figcaption>
 			<samp>input[type]:not(.class)</samp>
 			<samp>0–2–1</samp>
 		</figure>
