Correct closing tag usage to permit efficacy of hard break.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ h1:first-line { font-size: 40px; }
 h1 a { color: #333; }
 h1 a:hover, h1 a:focus { color: black; }
 h3 { display: inline-block; font-size: 11px; background-color: #cbc9c7; margin: 0; padding: 3px 5px; box-shadow: -1px -1px 0 white, -2px -2px 0 #d0cecd; }
+br + p { margin-top: 0; }
 samp { font-family: 'Hasklug Nerd Font', Hasklig, monospace; }
 
 hr { border: none; overflow: hidden; display: flex; justify-content: center; max-height: 30px; margin: 0 0 -8px; }
@@ -242,10 +243,10 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 	<footer>
 		<section id=about>
 			<h3>About</h3>
-			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others. When one of those methods completely fails, there is a conflict as to which CSS rule should be applied.
-			<p>CSS has in place a way to deal with those conflicts: the specificity of the CSS selector. The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.
+			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others. When one of those methods completely fails, there is a conflict as to which CSS rule should be applied.</p>
+			<p>CSS has in place a way to deal with those conflicts: the specificity of the CSS selector. The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.</p>
 			<br>
-			<p>This reference was formerly hosted at <a href=https://cssspecificity.com/ rel=nofollow>cssspecificty.com</a>, which went offline long ago. This was Alice's favourite reference for this, so she's restored the content, modernized it according to her taste in HTML, and made it available under <a href="https://specificity.webcore.io">specificity.webcore.io</a>. Links to relevant <a href=https://developer.mozilla.org target=_blank>Mozilla Developer Network</a> pages have also been added.
+			<p>This reference was formerly hosted at <a href=https://cssspecificity.com/ rel=nofollow>cssspecificty.com</a>, which went offline long ago. This was Alice's favourite reference for this, so she's restored the content, modernized it according to her taste in HTML, and made it available under <a href="https://specificity.webcore.io">specificity.webcore.io</a>. Links to relevant <a href=https://developer.mozilla.org target=_blank>Mozilla Developer Network</a> pages have also been added.</p>
 		</section>
 		<section id=legend>
 			<h3>Legend</h3>
