--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 <article>
 	<header>
 		<h1><a href="/">CSS<br>Specificity</a></h1>
-		<p>with icons inspired<br>by <a href=https://www.imdb.com/title/tt0081505/ target=_blank>“The Shining”</a></p>
+		<p>with icons inspired<br>by <a href="https://www.imdb.com/name/nm0000040/?ref_=tt_ov_dr">Stanley Kubrick</a>'s<br><a href="https://www.imdb.com/title/tt0081505/" target="_blank">“The Shining”</a></p>
 		<img src=img/typewriter.svg height=100>
 	</header>
 	
