Spelling, and additional alt detail.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 	<header>
 		<h1><a href="/">CSS<br>Specificity</a></h1>
 		<p>with icons inspired<br>by <a href="https://www.imdb.com/name/nm0000040/?ref_=tt_ov_dr">Stanley Kubrick</a>'s<br><a href="https://www.imdb.com/title/tt0081505/" target="_blank">“The Shining”</a></p>
-		<img src=img/typewriter.svg height=100 alt="The typewriter from the movie, with 'all work and no play make Jack a dull boy' written across the page severla times.">
+		<img src=img/typewriter.svg height=100 alt="The typewriter from the movie, with 'all work and no play make Jack a dull boy' written across the page several times, progressively more unhinged.">
 	</header>
 	
 	<section id=selectors>
