Correction for inappropriate "font" insertion.

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 	<hr>
 	
 	<footer>
-font		<section id=about>
+		<section id=about>
 			<h3>About</h3>
 			<p>The origin and sorting order of CSS helps browsers to determine which rules win out over others. When one of those methods completely fails, there is a conflict as to which CSS rule should be applied.</p>
 			<p>CSS has in place a way to deal with those conflicts: the specificity of the CSS selector. The higher the specificity of a CSS selector, the greater the likelihood its declarations are used over another CSS rule's declarations.</p>
@@ -257,7 +257,7 @@ font		<section id=about>
 		</section>
 		<section id=legend>
 			<h3>Legend</h3>
-			<dlfont>
+			<dl>
 				<div>
 					<dt><samp>x-0-0</samp>
 					<dd>The number of <a href=https://developer.mozilla.org/en-US/docs/Web/CSS/ID_selectors target=_blank>ID selectors</a>.
