Add note about analtyics, tracking, and JS.

--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@ footer dd { flex: 1 0; margin: 0; margin-left: 10px; line-height: 1.4; padding-t
 			<br>
 			<li>Preserved by <a href="https://web.archive.org/web/20220318101613/https://cssspecificity.com/">Archive.org</a>
 			<li>Modernized by <a href="https://marrow.haus/@alice">Alice Bevan-McGregor</a>
-			<li>From a Specificity Outlined by <a href="https://twitter.com/@estellevw">Estelle Weyl</a>
+			<li>From a Specificity Outlined by <a href="https://twitter.com/@estellevw">Estelle Weyl</a></li>
+			<br>
+			<li>This page will always remain analytics and tracking-free and does not utilize JavaScript.
 		</ul>
 	</footer>
 </article>
